@@ -1,3 +1,5 @@
+2009-01-02 Allow multipage pdf files. - JKS
+
 2008-12-31 Improve pdf usetex by adding support for font effects
            (slanting and extending). - JKS
 
